--- a/index.css
+++ b/index.css
@@ -10,11 +10,39 @@
 }
 .nav-items ul{
   display: flex;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   padding: 0 20px;
 }
 
 .nav-items ul li{
   margin: 8px;
   list-style: none;
+}
+
+/* restaurant card */
+
+.res-card{
+  /* border: 1px solid blue; */
+  padding: 10px;
+  width: 250px;
+  margin: 10px 10px;
+}
+
+.res-card:hover{
+  /* width: 200px; */
+  /* height: 200px; */
+  border: 1px solid blue;
+  cursor: pointer;
+}
+
+.img-logo{
+  width: 250px;
+  height: 200px;
+  border-radius: 10px;
+}
+.res-container{
+  display: flex;
+  flex-wrap: wrap;
+  /* align-items: center; */
+  justify-content: center;
 }
